@@ -1,9 +1,16 @@
 package ch.scaille.tcwriter.server;
 
 import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 
 import ch.scaille.tcwriter.server.config.ApplicationConfig;
 
+/**
+ * Run with<br>
+ * Project: testcase-writer-webapp-api-v0-backend<br>
+ * jvm arg: --add-modules testcase.writer.webapp.api.v0.backend --add-reads org.hibernate.validator=org.apache.tomcat.embed.el
+ */
+@EnableAutoConfiguration
 public class Server {
 
 	static void main(String[] args) {
